# minihook-rs

./: Cargo.toml  README.md
minihook_core/: Cargo.toml
minihook_core/src/: hooks.rs  lib.rs  main.rs  minihook.rs  process.rs
minihook_injector/: Cargo.toml
minihook_payload/: Cargo.toml
minihook_payload/src/: helper.rs  hooks.rs  lib.rs
src/: lib.rs  main.rs  minihook.rs  process.rs  process_new.rs
