[package]
name = "minihook_payload"
version = "0.1.0"
edition = "2024"

[dependencies]


[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = ">=0.59, <=0.62"
features = ["Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
]